Added my project OctaNet

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <ul class="thumb">
                 <li><img src="images/pic5.jpg" onclick="imgSlider('images/pic5.jpg');changeCircleColor('#d752b1')"></li>
                 <li><img src="images/pic7.jpg" onclick="imgSlider('images/pic7.jpg');changeCircleColor('#800020')"></li>
-                <li><img src="images/Pic6.webp" onclick="imgSlider('images/Pic6.webp');changeCircleColor('#eb7495')"></li>
+                <li><img src="images/logo9.jpg" onclick="imgSlider('images/logo9.jpg');changeCircleColor('#eb7495')"></li>
                 <li><img src="images/pic8.avif" onclick="imgSlider('images/pic8.avif');changeCircleColor('#5B5659')"></li>
             </ul>
             <ul class="sci">
